# LogicProFormatWriter

./: .gitignore  DONORS.md  PROJECTDATA_FORMAT.md  README.md  bake_seeds.py  pyproject.toml  test_alac.py  test_audio_mixed.py  test_av_bundle.py  test_beatmap.py  test_combine.py  test_decoders.py  test_inst_synth.py  test_midi_export.py  test_midi_notes.py  test_naming.py  test_region_synth.py  test_seeds.py  test_stereo.py  test_synth.py  test_timemap.py
fixtures/F0_baseline.logicx/Resources/: ProjectInformation.plist
fixtures/F10_sigs.logicx/Resources/: ProjectInformation.plist
fixtures/F11_markers.logicx/Resources/: ProjectInformation.plist
fixtures/F12_markers.logicx/Resources/: ProjectInformation.plist
fixtures/F13_settled_or_not.logicx/Resources/: ProjectInformation.plist
fixtures/F14_audio_base.logicx/Resources/: ProjectInformation.plist
fixtures/F15_audio_bar5.logicx/Resources/: ProjectInformation.plist
fixtures/F16_sr48.logicx/Resources/: ProjectInformation.plist
fixtures/F1_tempo.logicx/Resources/: ProjectInformation.plist
fixtures/F20_multi_regions.logicx/Resources/: ProjectInformation.plist
fixtures/F22_multimidi.logicx/Resources/: ProjectInformation.plist
fixtures/F2_tempomap.logicx/Resources/: ProjectInformation.plist
fixtures/F3_marker.logicx/Resources/: ProjectInformation.plist
fixtures/F4b_midinotes.logicx/Resources/: ProjectInformation.plist
logicx/: __init__.py  alac.py  midimap.py  projectdata.py
logicx/data/: audio_base.seed  mixed_base.seed
tools/: README.md  logicx_tool.py  re_probe.py
(+280 files in other folders)
